# ftbq-keygen

./: README.md  pyproject.toml
src/ftbq_keygen/: main.py
